--- a/project/package.json
+++ b/project/package.json
@@ -6,10 +6,12 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "dayjs": "^1.11.5",
+    "focus-trap-react": "^10.0.0",
     "history": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-remove-scroll": "^2.5.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "reselect": "^4.0.0"
