--- a/project/package.json
+++ b/project/package.json
@@ -10,10 +10,12 @@
     "history": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.2",
     "react-remove-scroll": "^2.5.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "reselect": "^4.0.0"
   },
   "scripts": {
