--- a/project/package.json
+++ b/project/package.json
@@ -8,6 +8,7 @@
     "dayjs": "^1.11.5",
     "focus-trap-react": "^10.0.0",
     "history": "^5.2.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
@@ -51,6 +52,7 @@
     "@testing-library/user-event": "^14.2.0",
     "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^12.20.55",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
